--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ ul > li {
 .hero {
     height: 100vh;
     min-height: 650px;
-    background: url('/img/bg/hero.jpg') center center / cover no-repeat;
+    background: url('../img/bg/hero.jpg') center center / cover no-repeat;
     position: relative;
     margin-bottom: 130px;
     align-items: center;
@@ -175,13 +175,13 @@ ul > li {
     opacity: 1;
 }
 .fade-slider__item--style-tshirts {
-    background-image: url('/img/content/hero/slider_pic_1.png');
+    background-image: url('../img/content/hero/slider_pic_1.png');
 }
 .fade-slider__item--style-games {
-    background-image: url('/img/content/hero/slider_pic_2.png');
+    background-image: url('../img/content/hero/slider_pic_2.png');
 }
 .fade-slider__item--style-presents {
-    background-image: url('/img/content/hero/slider_pic_3.png');
+    background-image: url('../img/content/hero/slider_pic_3.png');
 }
 .fade-slider__text {
     position: absolute;
@@ -364,7 +364,7 @@ ul > li {
     flex: 1;
     overflow: hidden;
     margin-right: 30px;
-    background: url(/img/bg/pattern.png) center center / 100%;
+    background: url(../img/bg/pattern.png) center center / 100%;
     position: relative;
 }
 .collections__item:before {
@@ -378,10 +378,10 @@ ul > li {
     background: center center / contain no-repeat;
 }
 .collections__item--type-guys:before {
-    background-image: url(/img/collections/collection_man.png);
+    background-image: url(../img/collections/collection_man.png);
 }
 .collections__item--type-girls:before {
-    background-image: url(/img/collections/collection_woman.png);
+    background-image: url(../img/collections/collection_woman.png);
     top: -31%;
     width: 80%;
     left: -25%;
@@ -490,7 +490,7 @@ ul > li {
 }
 .extras__col-socials {
     height: 100%;
-    background: url(/img/bg/pattern.png) center center / 100%;
+    background: url(../img/bg/pattern.png) center center / 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -586,7 +586,7 @@ ul > li {
 }
 .extras__col-socials {
     height: 100%;
-    background: url("/img/bg/pattern.png") center center / 500px;
+    background: url("../img/bg/pattern.png") center center / 500px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -616,7 +616,7 @@ ul > li {
 
 .header-inner {
     min-height: 180px;
-    background: url("/img/bg/hero.jpg") center center / cover no-repeat;
+    background: url("../img/bg/hero.jpg") center center / cover no-repeat;
     position: relative;
     margin-bottom: 85px;
     overflow: hidden;
@@ -629,7 +629,7 @@ ul > li {
     width: 65%;
     top: -18px;
     left: 18%;
-    background: url('/img/decor/header-guys.png')center center / contain no-repeat;
+    background: url('../img/decor/header-guys.png')center center / contain no-repeat;
 }
 .header__text{
     position: absolute;
